@@ -1,10 +1,13 @@
 --- CHANGELOG ---
+--- PyFMI-2.9.8 ---
+    * Resolved a bug in the example fmi20_bouncing_ball_native where a step-event is triggered in every timestep.
+    * Changed some imports to remove DeprecationWarnings.
+
 --- PyFMI-2.9.7 ---
     * Added an argument to ResultDymolaBinary to allow for reading updated
       data from the loaded file.
     * Added option "synchronize_simulation" to allow for synchronizing 
       simulation with (scaled) real-time.
-    * Resolved a bug in the example fmi20_bouncing_ball_native where a step-event is triggered in every timestep.
 
 --- PyFMI-2.9.6 ---
     * Added setup.cfg that lists all Python package dependencies in order to run PyFMI.
